Ajout des liens reseaux sociaux sur le code

--- a/index.html
+++ b/index.html
@@ -4,6 +4,37 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Page d'accueil</title>
+    <style>
+        body {
+            background: linear-gradient(to bottom, #0000ff, #00ffff);
+            color: white;
+            text-align: center;
+            font-family: Arial, sans-serif;
+        }
+        .cybersecurity-image {
+            width: 100px;
+            height: auto;
+            margin-top: 20px;
+        }
+        .social-icons {
+            margin-top: 20px;
+        }
+        .social-icons a {
+            margin: 0 10px;
+            text-decoration: none;
+            color: white;
+        }
+        .social-icons img {
+            width: 30px;
+            height: 30px;
+        }
+        button {
+            margin: 10px;
+            padding: 10px 20px;
+            font-size: 16px;
+            cursor: pointer;
+        }
+    </style>
 </head>
 <body>
     <h1>ENSITECH</h1>
@@ -12,6 +43,14 @@
     <p>Que voulez-vous faire ?</p>
     <button onclick="alert('Commencer ici')">Commencer ici</button>
     <button onclick="alert('Visite guidée')">Visite guidée</button>
+    <img src="https://via.placeholder.com/100" alt="Cybersécurité" class="cybersecurity-image">
+    <div class="social-icons">
+        <a href="https://www.instagram.com/mister.light" target="_blank">
+            <img src="https://upload.wikimedia.org/wikipedia/commons/a/a5/Instagram_icon.png" alt="Instagram">
+        </a>
+        <a href="https://www.tiktok.com/@misterlight5372" target="_blank">
+            <img src="https://upload.wikimedia.org/wikipedia/commons/6/69/TikTok_logo.png" alt="TikTok">
+        </a>
+    </div>
 </body>
 </html>
-
