Ajout des liens reseaux sociaux sur le code

--- a/index.html
+++ b/index.html
@@ -10,6 +10,12 @@
             color: white;
             text-align: center;
             font-family: Arial, sans-serif;
+            margin: 0;
+            height: 100vh;
+            display: flex;
+            flex-direction: column;
+            justify-content: center;
+            align-items: center;
         }
         .cybersecurity-image {
             width: 100px;
