Ajout des liens reseaux sociaux sur le code

--- a/index.html
+++ b/index.html
@@ -44,8 +44,10 @@
 </head>
 <body>
     <h1>ENSITECH</h1>
+    <p>Ecole : ENSITECH CERGY</p>
     <p>Nom : Gaetan N</p>
     <p>Classe : M2 SSR</p>
+    <p>Année : 2024-2025</p>
     <p>Que voulez-vous faire ?</p>
     <button onclick="alert('Commencer ici')">Commencer ici</button>
     <button onclick="alert('Visite guidée')">Visite guidée</button>
@@ -54,7 +56,7 @@
         <a href="https://www.instagram.com/mister.light" target="_blank">
             <img src="https://upload.wikimedia.org/wikipedia/commons/a/a5/Instagram_icon.png" alt="Instagram">
         </a>
-        <a href="https://www.tiktok.com/@misterlight5372" target="_blank">
+        <a href="https://www.tiktok.com/@mavoula.info242" target="_blank">
             <img src="https://upload.wikimedia.org/wikipedia/commons/6/69/TikTok_logo.png" alt="TikTok">
         </a>
     </div>
