--- a/index.html
+++ b/index.html
@@ -51,13 +51,10 @@
     <p>Que voulez-vous faire ?</p>
     <button onclick="alert('Commencer ici')">Commencer ici</button>
     <button onclick="alert('Visite guidée')">Visite guidée</button>
-    <img src="https://via.placeholder.com/100" alt="Cybersécurité" class="cybersecurity-image">
+    <img src=""C:\Users\gaeta\DEVOPS2025\logo-cyber.jpg"" alt="Cybersécurité" class="cybersecurity-image">
     <div class="social-icons">
         <a href="https://www.instagram.com/mister.light" target="_blank">
             <img src="https://upload.wikimedia.org/wikipedia/commons/a/a5/Instagram_icon.png" alt="Instagram">
-        </a>
-        <a href="https://www.tiktok.com/@mavoula.info242" target="_blank">
-            <img src="https://upload.wikimedia.org/wikipedia/commons/6/69/TikTok_logo.png" alt="TikTok">
         </a>
     </div>
 </body>
