modif lien réseaux sociaux

--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
     <p>Que voulez-vous faire ?</p>
     <button onclick="alert('Commencer ici')">Commencer ici</button>
     <button onclick="alert('Visite guidée')">Visite guidée</button>
-    <img src=""C:\Users\gaeta\DEVOPS2025\logo-cyber.jpg"" alt="Cybersécurité" class="cybersecurity-image">
+    <img src="https://github.com/lesabel/DEVOPS2025/blob/main/logo-cyber.jpg" alt="Cybersécurité" class="cybersecurity-image">
     <div class="social-icons">
         <a href="https://www.instagram.com/mister.light" target="_blank">
             <img src="https://upload.wikimedia.org/wikipedia/commons/a/a5/Instagram_icon.png" alt="Instagram">
