modif lien réseaux sociaux 12h14

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Page d'accueil</title>
+    <title>Page github lesabel</title>
     <style>
         body {
             background: linear-gradient(to bottom, #0000ff, #00ffff);
